--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,12 @@ dependencies:
   cached_network_image: ^3.3.0
   hive_flutter: ^1.1.0
   flutter_slidable: ^3.0.1
+  audio_video_progress_bar: ^2.0.1
   extended_image: ^8.2.0
   dropdown_button2: ^2.3.9
   photo_view: ^0.14.0
   persistent_bottom_nav_bar: ^5.0.2
+  ffmpeg_kit_flutter: ^6.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
