--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ description: "The music project."
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 0.1.5+1
 
 environment:
   sdk: '>=3.2.0 <4.0.0'
@@ -47,6 +47,7 @@ dependencies:
   photo_view: ^0.14.0
   persistent_bottom_nav_bar: ^5.0.2
   ffmpeg_kit_flutter: ^6.0.3
+  permission_handler: ^11.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
