--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   audio_service: ^0.18.12
   path_provider: ^2.1.1
   provider: ^6.1.1
-  cached_network_image: ^3.3.0
+  cached_network_image: ^3.3.1
   hive_flutter: ^1.1.0
   flutter_slidable: ^3.0.1
   audio_video_progress_bar: ^2.0.1
@@ -48,6 +48,7 @@ dependencies:
   persistent_bottom_nav_bar: ^5.0.2
   ffmpeg_kit_flutter: ^6.0.3
   permission_handler: ^11.2.0
+  flutter_cache_manager: ^3.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
