Update: 13 Feb, 2024 ; 4:51 PM
// Achieved
- slider improvements and used streams for instant audio seeking

//To-Do next

- bring player controls to lock screen when phone is locked.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -15,7 +15,11 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>harmony</string>
+	<string>verve</string>
+	<key>UIBackgroundModes</key>
+     <array>
+     	<string>audio</string>
+     </array>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
