--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,16 +34,22 @@ dependencies:
   youtube_explode_dart: ^2.0.4
   palette_generator: ^0.3.3+3
   marquee: ^2.2.3
-  audioplayers: ^5.2.1
-  #just_audio: ^0.9.36
-  #just_audio_background: ^0.0.1-beta.11
+  #audioplayers: ^5.2.1
+  flutter_local_notifications: ^16.3.2
+  flutter_background_service: ^5.0.5
   audio_service: ^0.18.12
+  just_audio_background: ^0.0.1-beta.11
+  just_audio: ^0.9.36
+  on_audio_query: ^2.9.0
+  #just_audio_background: ^0.0.1-beta.11
+  #audio_service: ^0.18.12
   path_provider: ^2.1.1
   provider: ^6.1.1
   cached_network_image: ^3.3.1
   hive_flutter: ^1.1.0
   flutter_slidable: ^3.0.1
-  audio_video_progress_bar: ^2.0.1
+  #audio_video_progress_bar: ^2.0.1
+  audio_session: ^0.1.18
   extended_image: ^8.2.0
   dropdown_button2: ^2.3.9
   photo_view: ^0.14.0
