--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,12 @@ dependencies:
   palette_generator: ^0.3.3+3
   marquee: ^2.2.3
   #audioplayers: ^5.2.1
-  flutter_local_notifications: ^16.3.2
-  flutter_background_service: ^5.0.5
+  #flutter_local_notifications: ^16.3.2
+  #flutter_background_service: ^5.0.5
   audio_service: ^0.18.12
-  just_audio_background: ^0.0.1-beta.11
+  #just_audio_background: ^0.0.1-beta.11
   just_audio: ^0.9.36
-  on_audio_query: ^2.9.0
+  #on_audio_query: ^2.9.0
   #just_audio_background: ^0.0.1-beta.11
   #audio_service: ^0.18.12
   path_provider: ^2.1.1
@@ -49,7 +49,8 @@ dependencies:
   hive_flutter: ^1.1.0
   flutter_slidable: ^3.0.1
   #audio_video_progress_bar: ^2.0.1
-  audio_session: ^0.1.18
+  #audio_session: ^0.1.18
+  carousel_slider: ^4.2.1
   extended_image: ^8.2.0
   dropdown_button2: ^2.3.9
   photo_view: ^0.14.0
@@ -71,8 +72,12 @@ flutter_launcher_icons:
   remove_alpha_ios: true
   android: true
 
+flutter_icons:
   ios: true
-  image_path: "assets/icon/icon.png"
+  android: true
+  image_path_ios: "assets/icon/icon.png"
+  image_path_android: "assets/icon/icon.png"
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
