--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
 
   youtube_explode_dart: ^2.0.4
   palette_generator: ^0.3.3+3
-  marquee: ^2.2.3
+  marquee_text: ^2.5.0+1
+  #marquee: ^2.2.3
   #audioplayers: ^5.2.1
   #flutter_local_notifications: ^16.3.2
   #flutter_background_service: ^5.0.5
@@ -43,21 +44,23 @@ dependencies:
   #on_audio_query: ^2.9.0
   #just_audio_background: ^0.0.1-beta.11
   #audio_service: ^0.18.12
+
   path_provider: ^2.1.1
   provider: ^6.1.1
   cached_network_image: ^3.3.1
   hive_flutter: ^1.1.0
-  flutter_slidable: ^3.0.1
+  flutter_slidable: ^3.1.0
   #audio_video_progress_bar: ^2.0.1
   #audio_session: ^0.1.18
   carousel_slider: ^4.2.1
-  extended_image: ^8.2.0
-  dropdown_button2: ^2.3.9
+  extended_image: ^8.2.1
+  #dropdown_button2: ^2.3.9
   photo_view: ^0.14.0
-  persistent_bottom_nav_bar: ^5.0.2
+  persistent_bottom_nav_bar_v2: ^5.2.3
   ffmpeg_kit_flutter: ^6.0.3
   permission_handler: ^11.2.0
   flutter_cache_manager: ^3.3.1
+  fading_edge_scrollview: ^4.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
